Hid horizontal scrollbar to prevent page shifting.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,10 @@
   }
 }
 
+html {
+  overflow-y: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
